--- a/blog-service.properties
+++ b/blog-service.properties
@@ -1,3 +1,4 @@
+server.port=8093
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_blog?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
