--- a/user-service.properties
+++ b/user-service.properties
@@ -3,7 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/micro_user?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
