--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,4 +1,6 @@
 sms.auth.jwt.secret=thisisasecret
+sms.auth.token.header.name=SMS_API_KEY
+sms.auth.token.value=thisisasecret
 server.port=8091
 
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_auth?serverTimezone=UTC
