auth service added in confic server

--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -7,9 +7,15 @@ spring:
         - id: user-service
           uri: lb://USER-SERVICE
           predicates:
-            - Path=/api/users/**
+            - Path=/api/users/**,
+
         - id: blog-service
           uri: lb://BLOG-SERVICE
           predicates:
             - Path=/api/blog/**,
-        
+
+        - id: auth-service
+          uri: lb://AUTH-SERVICE
+          presicates:
+            -Path=/api/auth/**
+
