changes in gateway service application.properties file

--- a/gateway-server.yml
+++ b/gateway-server.yml
@@ -16,6 +16,6 @@ spring:
 
         - id: auth-service
           uri: lb://AUTH-SERVICE
-          presicates:
+          predicates:
             -Path=/api/auth/**
 
